--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_user"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_usuario"/>
+        android:icon="@drawable/icons8contactos100"
+        android:title="@string/title_contactos"/>
 
     <item
         android:id="@+id/navigation_chats"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/icons8charla100"
         android:title="@string/title_chats"/>
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/icons8ajustes96"
         android:title="@string/title_settings"/>
 
 </menu>
