--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="5dp"
     >
 
     <android.support.v7.widget.CardView
@@ -24,13 +24,13 @@
                 android:src="@drawable/user" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/titleChat"
-                android:layout_toRightOf="@+id/person_photo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:textSize="30sp"
-                />
+                android:layout_toRightOf="@+id/person_photo"
+                android:fontFamily="@font/montserrat"
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="wrap_content"
