--- a/app/src/main/res/layout/contact_item.xml
+++ b/app/src/main/res/layout/contact_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="16dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="5dp"
     >
 
     <android.support.v7.widget.CardView
@@ -24,21 +25,21 @@
                 android:src="@drawable/user" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/nickname"
-                android:layout_toRightOf="@+id/person_photo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:textSize="30sp"
-                />
+                android:layout_toRightOf="@+id/person_photo"
+                android:fontFamily="@font/montserrat"
+                android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/email"
-                android:layout_toRightOf="@+id/person_photo"
                 android:layout_below="@+id/nickname"
-                />
+                android:layout_toRightOf="@+id/person_photo"
+                android:fontFamily="@font/montserrat" />
 
         </RelativeLayout>
 
