--- a/app/src/main/res/drawable/gradientbackground.xml
+++ b/app/src/main/res/drawable/gradientbackground.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:angle="45"
-        android:startColor="#1f8dd4"
-        android:endColor="#ffffff"
+        android:startColor="#1fddff"
+        android:endColor="#ff4b1f"
         />
 
 </shape>
