--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -13,6 +13,10 @@ tools:context=".Fragments.ChatsFragment"
         android:layout_height="wrap_content"
         />
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:foregroundGravity="center_vertical"
         android:id="@+id/lista_chats"
@@ -21,7 +25,5 @@ tools:context=".Fragments.ChatsFragment"
 
 
 
-
-
-
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
