--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -6,18 +6,21 @@ android:layout_height="match_parent"
 tools:context=".Fragments.ChatsFragment"
     android:orientation="vertical">
 
-
     <SearchView
         android:id="@+id/search_contact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:foregroundGravity="center_vertical"
         android:id="@+id/lista_contacts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
