--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -25,7 +25,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    android:src="@drawable/icons8contactos100"/>
+                    android:src="@drawable/user2"/>
                 <TextView
                     android:layout_marginTop="10dp"
                     android:layout_gravity="center_horizontal"
