--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -27,11 +27,12 @@
                     android:layout_height="150dp"
                     android:src="@drawable/user2"/>
                 <TextView
+                    android:id="@+id/nickname"
                     android:layout_marginTop="10dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Wiliam Snoe"
+                    android:text="User"
                     android:textColor="#fff"
                     android:textStyle="bold"
                     android:textSize="21sp"/>
