--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,5 +8,8 @@
         android:orderInCategory="1"
         app:showAsAction="ifRoom" />
 
-
+    <item android:id="@+id/logout"
+        android:title="Logout"
+        android:orderInCategory="1"
+        />
 </menu>
